--- a/dev/ember-project/app/templates/application.hbs
+++ b/dev/ember-project/app/templates/application.hbs
@@ -1,5 +1,9 @@
 {{!-- app/templates/application.hbs --}}
-<AppLayout>
-  {{!-- Any additional content can go here --}}
+
+<header>
+  <h1>LAYOUT</h1>
+</header>
+
+<main>
   {{outlet}}
-</AppLayout>
+</main>
