--- a/dev/ember-project/app/templates/index.hbs
+++ b/dev/ember-project/app/templates/index.hbs
@@ -1,24 +1,7 @@
 {{!-- app/templates/index.hbs --}}
-<h1>Welcome to the Index Page!</h1>
 
-<div class="container-fluid full-height">
-  <div class="row full-height">
-    <div class="col">
-      1 of 3
-    </div>
-    <div class="col-6 d-flex flex-column justify-content-between">
-      <div class="container mid-container">
-        Container mid 1
-      </div>
-      <div class="container mid-container">
-        Container mid 2
-      </div>
-      <div class="container mid-container">
-        Container mid 3
-      </div>
-    </div>
-    <div class="col">
-      3 of 3
-    </div>
-  </div>
-</div>
+<section>
+  <h2>Welcome to the Homepage!</h2>
+  <p>This is the content of the index route.</p>
+  {{navigation}}
+</section>
