updated version,added bootstrap and startet layouting

--- a/dev/ember-project/app/components/navi.hbs
+++ b/dev/ember-project/app/components/navi.hbs
@@ -1,6 +1,5 @@
 <nav>
-    {{!-- app/templates/application.hbs --}}
-    {{#if session.isAuthenticated}}
+    {{#if this.session.isAuthenticated}}
         <button type="button" {{on "click" this.logout}}>Logout</button>
     {{/if}}
 </nav>
