--- a/dev/ember-project/app/templates/application.hbs
+++ b/dev/ember-project/app/templates/application.hbs
@@ -1,8 +1,27 @@
 {{!-- app/templates/application.hbs --}}
+<div id="ember-bootstrap-wormhole"></div>
 
-<header>
-  <h1>LAYOUT</h1>
-</header>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      1 of 2
+    </div>
+    <div class="col">
+      2 of 2
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      1 of 3
+    </div>
+    <div class="col">
+      2 of 3
+    </div>
+    <div class="col">
+      3 of 3
+    </div>
+  </div>
+</div>
 
 <main>
   {{outlet}}
