--- a/dev/ember-project/app/templates/index.hbs
+++ b/dev/ember-project/app/templates/index.hbs
@@ -3,5 +3,5 @@
 <section>
   <h2>Welcome to the Homepage!</h2>
   <p>This is the content of the index route.</p>
-  {{navigation}}
+  <Navi />
 </section>
