--- a/dev/ember-project/app/templates/application.hbs
+++ b/dev/ember-project/app/templates/application.hbs
@@ -1,28 +1,44 @@
 {{!-- app/templates/application.hbs --}}
 <div id="ember-bootstrap-wormhole"></div>
 
-<div class="container">
+<div class="container-fluid">
   <div class="row">
-    <div class="col">
-      1 of 2
+    <div class="col profile-header">
+     <ProfileOwn />
     </div>
-    <div class="col">
-      2 of 2
+    <div class="col profile-header">
+      <ProfileOther />
     </div>
   </div>
   <div class="row">
     <div class="col">
       1 of 3
     </div>
-    <div class="col">
-      2 of 3
+    <div class="col-6 pong-game">
+      <div class="paddle paddle-left"></div>
+      <div class="ball"></div>
+      <div class="paddle paddle-right"></div>
     </div>
     <div class="col">
-      3 of 3
+      <NavigationBar />
+      <UserList/>
     </div>
   </div>
+  <div class="row">
+    <div class="col profile-footer">
+      1 of 3
+    </div>
+    <div class="col-6 profile-footer">
+      2 of 3
+    </div>
+    <div class="col profile-footer">
+      3 of 3
+    </div>
+  </div>    
 </div>
 
 <main>
   {{outlet}}
 </main>
+
+
