--- a/dev/ember-project/app/styles/app.css
+++ b/dev/ember-project/app/styles/app.css
@@ -8,12 +8,20 @@ body {
   padding: 0; /* Remove default padding */
 }
 
+h1 {
+    text-align: center; /* Center the heading */
+    color: #333; /* Dark gray color for the heading */
+    font-size: 5rem; /* Increase font size */
+    font-weight: bold; /* Make the font bold */
+    font-family: Arial, sans-serif; /* Set a modern font family */
+  }
+
 h2 {
   text-align: center; /* Center the heading */
   color: #333; /* Dark gray color for the heading */
   font-size: 1.5rem; /* Increase font size */
   font-weight: bold; /* Make the font bold */
-  font-family: "Arial", sans-serif; /* Set a modern font family */
+  font-family: Arial, sans-serif; /* Set a modern font family */
 }
 
 /* Label styling */
@@ -69,10 +77,15 @@ button:hover {
 }
 
 .container-fluid .col-6 {
-  padding: 15px;
+  background-color: #c7b6b6; /* Light gray color */
   margin: 5px; /* Adds a small margin between columns */
   border-radius: 5px; /* Optional: gives rounded corners */
 }
+/* Make the Pong game container fill the available height */
+.container-fluid .col-6.pong-game {
+    background-color: #000; /* Set black background for pong-game */
+    border: 2px solid white; /* Optional: border for visibility */
+  }
 
 /* Make the Pong game container fill the available height */
 .pong-game {
@@ -182,7 +195,7 @@ button:hover {
   margin: 0.5vw; /* Margin using viewport width */
   cursor: pointer; /* Pointer cursor on hover */
   font-size: 1.8vw; /* Adjusted font size for better visibility */
-  padding: 5px 10px; /* Padding for buttons to make them larger */
+  padding: 5px 5px; /* Padding for buttons to make them larger */
   transition:
     background-color 0.3s,
     color 0.3s,
@@ -208,7 +221,6 @@ button:hover {
 .profile-details {
   display: flex;
   justify-content: space-between; /* Aligns name left and points right */
-
   flex: 1; /* Allows it to fill remaining space */
 }
 
@@ -235,6 +247,7 @@ button:hover {
   transition:
     background-color 0.3s,
     box-shadow 0.3s; /* Smooth transitions */
+
   text-align: left; /* Ensures text aligns properly */
 }
 
@@ -247,19 +260,19 @@ button:hover {
 
 .user-card:hover {
   background-color: #d39191; /* Light gray on hover */
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow on hover */
+  box-shadow: 0 4px 8px rgb(0 0 0 / 10%); /* Subtle shadow on hover */
 }
 
 .user-card:active {
   background-color: #c08080; /* Darker gray on active state */
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); /* Reduced shadow on active */
+  box-shadow: 0 2px 4px rgb(0 0 0 / 20%); /* Reduced shadow on active */
   transform: scale(0.98); /* Slight "press" effect */
 }
 
 .logout-button {
   width: 5vw; /* Fixed width */
   height: 2vw; /* Fixed height */
-  margin-top: 0px;
+  margin-top: 0;
   background-color: #ff6347;
   color: white;
   border: none;
