--- a/dev/ember-project/app/templates/application.hbs
+++ b/dev/ember-project/app/templates/application.hbs
@@ -7,12 +7,12 @@
      <ProfileOwn />
     </div>
     <div class="col profile-header">
-      <ProfileOther />
+        <ProfileOther />
     </div>
   </div>
   <div class="row">
     <div class="col">
-      1 of 3
+      <button class="nav-button" type="button">Create Tournament</button>
     </div>
     <div class="col-6 pong-game">
       <div class="paddle paddle-left"></div>
@@ -29,7 +29,7 @@
       1 of 3
     </div>
     <div class="col-6 profile-footer">
-      2 of 3
+      <Scoreboard />
     </div>
     <div class="col profile-footer">
       3 of 3
