--- a/dev/ember-project/app/templates/login.hbs
+++ b/dev/ember-project/app/templates/login.hbs
@@ -8,6 +8,7 @@
       <input type="password" name="password" {{on "change" (fn this.update "password")}} />
 
       <button type="submit">Login</button>
+      <button type="button" class="register-button" {{on "click" this.register}}>Register</button>
     </form>
 
     {{#if this.error}}
