--- a/dev/ember-project/app/templates/application.hbs
+++ b/dev/ember-project/app/templates/application.hbs
@@ -14,7 +14,11 @@
   </div>
   <div class="row">
     <div class="col">
-      <button class="nav-button" type="button">Create Tournament</button>
+        <div class="button-container spacing">
+            <LinkTo @route="pong-game" class="nav-button">Game</LinkTo>
+            <LinkTo @route="chat" class="nav-button">Chat</LinkTo>
+            <LinkTo @route="tournament" class="nav-button">Create Tournament</LinkTo>
+        </div>
     </div>
     <div class="col-6 pong-game">
 		{{outlet}}
