update Layout, added Chat and Game Buttons to invite Users and Basic Tournament Layout

--- a/dev/ember-project/app/templates/application.hbs
+++ b/dev/ember-project/app/templates/application.hbs
@@ -5,38 +5,39 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col profile-header">
+    <div class="col header">
      <ProfileOwn />
     </div>
-    <div class="col profile-header">
+    <div class="col header">
         <ProfileOther />
     </div>
   </div>
   <div class="row">
-    <div class="col">
+    <div class="container-fluid col middle">
         <div class="button-container spacing">
             <LinkTo @route="pong-game" class="nav-button">Game</LinkTo>
             <LinkTo @route="chat" class="nav-button">Chat</LinkTo>
             <LinkTo @route="tournament" class="nav-button">Create Tournament</LinkTo>
         </div>
     </div>
-    <div class="col-6 pong-game">
+    <div class="container-fluid col-6 middle">
 		{{outlet}}
     </div>
-    <div class="col">
+    <div class="container-fluid col middle">
       <NavigationBar />
       <UserList/>
     </div>
   </div>
   <div class="row">
-    <div class="col profile-footer">
-      1 of 3
+    <div class="container-fluid col footer">
+      <h2 class="name">Tournaments</h2>
+      <TournamentList/>
     </div>
-    <div class="col-6 profile-footer">
+    <div class="container-fluid col-6 footer">
       <Scoreboard />
     </div>
-    <div class="col profile-footer">
-      3 of 3
+    <div class="container-fluid col footer">
+	  <DirectMessage/>
     </div>
   </div>    
 </div>
