--- a/dev/ember-project/app/templates/tournament.hbs
+++ b/dev/ember-project/app/templates/tournament.hbs
@@ -1,8 +1,10 @@
-<div class="user-count">9/10</div>
-<UserList/>
-
-<div class="button-container">
-  <button class="nav-button start" type="button">Start Tournament</button>
-  <button class="nav-button cancel" type="button">Cancel Tournament</button>
+<div class="container-fluid row">
+	<div class="col-7">
+	  <div class="user-count">9/10</div>
+   	  <UserList />  
+	</div>
+	<div class="button-container col-5">
+	  <button class="nav-button start" type="button">Start Tournament</button>
+      <button class="nav-button cancel" type="button">Cancel Tournament</button> 
+	</div>
 </div>
-
