--- a/dev/ember-project/app/components/scoreboard.hbs
+++ b/dev/ember-project/app/components/scoreboard.hbs
@@ -1,4 +1,4 @@
-
+<div class="container-fluid row">
   {{!-- Profile picture column (1 part) --}}
   <div class="col-3">
     <h2 class="name">Next Match</h2>
@@ -7,7 +7,7 @@
   </div>
 
   {{!-- Profile details column (3 parts) --}}
-  <div class="col-6">
+  <div class="col-5">
     <h1>3:1</h1>
   </div>
 
@@ -16,4 +16,4 @@
     <User />
     <User />
   </div>
-
+</div>
