--- a/dev/ember-project/app/components/tournament-list.hbs
+++ b/dev/ember-project/app/components/tournament-list.hbs
@@ -1,4 +1,4 @@
-<div class="scrollable-list middle-scroll">
+<div class="scrollable-list footer-scroll">
     {{#each this.users as |user|}}
         <User @name={{user.name}} @points={{user.points}} @profilePicture={{user.profilePicture}} @selectUser={{this.selectUser}} />
     {{/each}}
