--- a/dev/ember-project/app/components/user.hbs
+++ b/dev/ember-project/app/components/user.hbs
@@ -1,8 +1,19 @@
-{{!-- app/components/user-card.hbs --}}
-<div class="user-card" role="button" tabindex="0" onclick={{this.selectUser}}>
+<div
+  class="user-card {{if this.isActive 'active'}}"
+  role="button"
+  tabindex="0"
+  onclick={{this.selectUser}}
+  {{on "click" this.handleCardClick}}
+>
     <img src={{@profilePicture}} alt="Profile Picture" class="user-pic user" />
     <div class="profile-details">
         <h2 class="name">{{@name}}</h2>
+
+        <div class="actions">
+            <button class="chat-button" onclick={{this.onChatClick}} type="button" {{on "click" this.stopEventPropagation}}>💬</button>
+            <button class="chat-button" onclick={{this.onGameClick}} type="button" {{on "click" this.stopEventPropagation}}>🎮</button>
+        </div>
+
         <h2 class="points">{{@points}}🏆</h2>
     </div>
 </div>
