added tournament functionality

--- a/dev/ember-project/app/components/profile-other.hbs
+++ b/dev/ember-project/app/components/profile-other.hbs
@@ -1,6 +1,6 @@
 <div class="container-fluid row">
   {{!-- Profile picture column (1 part) --}}
-  <div class="col-3">
+  <div class="col">
     <img src="/images/default-profile.jpeg" alt="Profile Picture" class="profile-pic" />
   </div>
 
