--- a/dev/ember-project/app/components/tournament-list.hbs
+++ b/dev/ember-project/app/components/tournament-list.hbs
@@ -1,5 +1,5 @@
-<div class="scrollable-list footer-scroll">
-    {{#each this.users as |user|}}
-        <User @name={{user.name}} @points={{user.points}} @profilePicture={{user.profilePicture}} @selectUser={{this.selectUser}} />
+<div class="scrollable-list middle-scroll">
+    {{#each this.tournaments as |tournament|}}
+        <Tournament @creator={{tournament.creator}} @current_players={{tournament.current_players}} @max_players={{tournament.max_players}}/>
     {{/each}}
 </div>
