--- a/dev/ember-project/app/templates/tournament.hbs
+++ b/dev/ember-project/app/templates/tournament.hbs
@@ -1,6 +1,6 @@
 <div class="container-fluid row">
 	<div class="col-7">
-	  <div class="user-count">9/10</div>
+	  <h2 class="points center">👥 {{this.model.current_players}}/{{this.model.max_players}}</h2>
    	  <UserList />  
 	</div>
 	<div class="button-container col-5">
