--- a/dev/ember-project/app/styles/app.css
+++ b/dev/ember-project/app/styles/app.css
@@ -16,7 +16,7 @@ p {
 h1 {
   text-align: center; /* Center the heading */
   color: #333; /* Dark gray color for the heading */
-  font-size: 5rem; /* Increase font size */
+  font-size: 2rem; /* Increase font size */
   font-weight: bold; /* Make the font bold */
   font-family: Arial, sans-serif; /* Set a modern font family */
 }
@@ -39,6 +39,24 @@ h3 {
   font-family: Arial, sans-serif; /* Set a modern font family */
   padding: 0;
   margin: 0;
+  align-items: center;
+}
+
+h4 {
+  text-align: center; /* Center the heading */
+  color: #fff; /* Dark gray color for the heading */
+  font-size: 6rem; /* Increase font size */
+  font-weight: bold; /* Make the font bold */
+  font-family: Arial, sans-serif; /* Set a modern font family */
+  align-items: center;
+}
+
+.white {
+  text-align: left;
+  color: #fff;
+  align-items: center;
+  padding: 0.5rem;
+  margin-top: 0.5rem;
 }
 
 /* Label styling */
@@ -61,8 +79,7 @@ input[type="password"] {
 }
 
 /* Button styling */
-button {
-  width: 100%; /* Full width */
+.login {
   padding: 10px; /* Padding inside button */
   background-color: #28a745; /* Bootstrap green color */
   border: none; /* No border */
@@ -73,8 +90,7 @@ button {
   transition: background-color 0.3s; /* Smooth background transition */
 }
 
-/* Button hover effect */
-button:hover {
+.login:hover {
   background-color: #218838; /* Darker green on hover */
 }
 
@@ -94,13 +110,14 @@ button:hover {
 
 /* Apply a light background color to each column */
 .container-fluid .col-3 {
-  background-color: #c7b6b6; /* Light gray color */
+ 
   border-radius: 10px; /* Optional: gives rounded corners */
 }
 
 .container-fluid .col-6 {
-  background-color: #c7b6b6; /* Light gray color */
+
   border-radius: 10px; /* Optional: gives rounded corners */
+  padding: 5px;
 }
 
 /* Make the Pong game container fill the available height */
@@ -146,6 +163,7 @@ button:hover {
   height: 15vh; /* Makes it half the viewport height */
   display: flex;
   align-items: center;
+  margin: 0.5vw;
 }
 
 .footer {
@@ -206,14 +224,13 @@ button:hover {
   width: 12vh; /* Width of the profile picture */
   height: 12vh; /* Height of the profile picture */
   border-radius: 50%; /* Makes the image round */
-  margin-right: 15px; /* Space between the image and text */
   align-items: center;
+  padding: 0;
 }
 
 .navigation-bar {
   display: flex; /* Use flexbox for alignment */
-  justify-content: space-around; /* Distribute buttons evenly */
-  width: 100%; /* Full width */
+  margin: 10px;
 }
 
 .nav-button {
@@ -223,8 +240,9 @@ button:hover {
   border-radius: 0.5vw; /* Rounded corners */
   margin: 0.5vw; /* Margin using viewport width */
   cursor: pointer; /* Pointer cursor on hover */
-  font-size: 1.8vw; /* Adjusted font size for better visibility */
-  padding: 5px; /* Padding for buttons to make them larger */
+  font-size: 1vw; /* Adjusted font size for better visibility */
+  padding: 5px;
+  padding-inline: 1.5rem; /* Padding for buttons to make them larger */
   transition:
     background-color 0.3s,
     color 0.3s,
@@ -281,7 +299,9 @@ button:hover {
   width: 5vh; /* Width of the profile picture */
   height: 5vh; /* Height of the profile picture */
   border-radius: 50%; /* Makes the image round */
-  margin-right: 15px; /* Space between the image and text */
+ 
+  margin: 5px;
+  margin-right: 10px;
 }
 
 .user-card:hover {
@@ -365,12 +385,12 @@ button:hover {
   background-color: #1eca46; /* Bootstrap green color */
 }
 
-.chat-button {
+.emoji-button {
   background: none; /* Ensure no background on hover */
   border: none;
   cursor: pointer;
   padding: 0; /* No extra space around the icon */
-  margin: 0.5rem; /* No margins to prevent unwanted spacing */
+  margin-inline: 0.5rem; /* No margins to prevent unwanted spacing */
   font-size: 2rem; /* Set the icon size */
   transition:
     font-size 0.3s ease,
@@ -382,17 +402,17 @@ button:hover {
   justify-content: center; /* Horizontally center the icon */
 }
 
-.chat-button:focus {
+.emoji-button:focus {
   outline: none; /* Remove default focus outline */
 }
 
-.chat-button:hover {
+.emoji-button:hover {
   opacity: 0.8; /* Slight fade effect */
   transform: scale(1.5); /* Scale the icon on hover */
   background: none; /* Ensure no background on hover */
 }
 
-.chat-button:active {
+.emoji-button:active {
   transform: scale(1.2); /* Slight "press" effect */
 }
 
@@ -431,10 +451,22 @@ button:hover {
 .join {
   background-color: #51a32b;
 }
+
+.update {
+  background-color: #b6f329;
+  align-items: center;
+  margin: 5px;
+  margin-left: 8rem;
+}
+
 .tournament-button:hover {
   background-color: #e5533d; /* Darker shade on hover */
 }
 
 .join:hover {
   background-color: #8cf01b; /* Darker shade on hover */
+}
+
+.center{
+  text-align: center;
 }
