game layouting updated

--- a/dev/ember-project/app/components/profile-own.hbs
+++ b/dev/ember-project/app/components/profile-own.hbs
@@ -1,4 +1,4 @@
-<div class="container-fluid row">
+<div class="container-fluid row fill">
   {{!-- Profile picture column (1 part) --}}
   <div class="col">
     <img src="/images/default-profile.jpeg" alt="Profile Picture" class="profile-pic" />
@@ -18,15 +18,15 @@
 
     {{!-- Second row of profile details --}}
     <div class="profile-details">
-      <h2 class="name">Some</h2>
-      <h2 class="name">Other</h2>
-      <h2 class="name">Stuff</h2>
+      <h2 >Some</h2>
+      <h2 >Other</h2>
+      <h2 >Stuff</h2>
     </div>
 
     <div class="profile-details">
-      <h2 class="name">Some</h2>
-      <h2 class="name">Other</h2>
-      <h2 class="name">Stuff</h2>
+      <h2 >Some</h2>
+      <h2 >Other</h2>
+      <h2 >Stuff</h2>
     </div>
     
   </div>
