--- a/dev/ember-project/app/components/tournament.hbs
+++ b/dev/ember-project/app/components/tournament.hbs
@@ -1,6 +1,6 @@
 <div class="user-card">
     <div class="profile-details">
-        <p><h2 class="name">{{@creator}}'s</h2>
+        <p><h2>{{@creator}}'s</h2>
         <h3>Tournament</h3></p>
         <div class="actions left">
             <button class="tournament-button join" onclick={{this.onJoinClick}} type="button">Join</button>
