--- a/dev/ember-project/app/components/profile-other.hbs
+++ b/dev/ember-project/app/components/profile-other.hbs
@@ -1,4 +1,4 @@
-<div class="container-fluid row">
+<div class="container-fluid row fill no-center">
   {{!-- Profile picture column (1 part) --}}
   <button type="button" class="btn-close" onclick={{this.onCloseClick}}></button>
   <img src={{@user.selectedUser.profilePicture}} alt="Profile Picture" class="profile-pic" />
@@ -7,17 +7,17 @@
     <div class="profile-details">
       <h2 class="name">{{@user.selectedUser.name}}</h2>
       <div class="actions">
-      <button class="emoji-button" data-bs-toggle="tooltip" data-bs-placement="top" title="Add Friend">
-        ➕ 
-      </button>
-      <button class="emoji-button" data-bs-toggle="tooltip" data-bs-placement="top" title="Block User">
-        🚫
-      </button>
-      <button class="emoji-button" data-bs-toggle="tooltip" data-bs-placement="top" title="Live Chat">
+      <button class="emoji-button" data-bs-toggle="tooltip" data-bs-placement="top" title="Live Chat" type="button">
         💬
       </button>
-      <button class="emoji-button" data-bs-toggle="tooltip" data-bs-placement="top" title="Play Game">
+      <button class="emoji-button" data-bs-toggle="tooltip" data-bs-placement="top" title="Play Game" type="button">
         🎮
+      </button>
+      <button class="emoji-button" data-bs-toggle="tooltip" data-bs-placement="top" title="Add Friend" type="button">
+        ➕ 
+      </button>
+      <button class="emoji-button" data-bs-toggle="tooltip" data-bs-placement="top" title="Block User" type="button">
+        🚫
       </button>
       </div>
       <h2 class="points">{{@user.selectedUser.points}} 🏆</h2>
@@ -25,15 +25,15 @@
 
     {{!-- Second row of profile details --}}
     <div class="profile-details">
-      <h2 class="name">Some</h2>
-      <h2 class="name">Other</h2>
-      <h2 class="name">Stuff</h2>
+      <h2>Some</h2>
+      <h2>Other</h2>
+      <h2>Stuff</h2>
     </div>
 
     <div class="profile-details">
-      <h2 class="name">Some</h2>
-      <h2 class="name">Other</h2>
-      <h2 class="name">Stuff</h2>
+      <h2>Some</h2>
+      <h2>Other</h2>
+      <h2>Stuff</h2>
     </div>
 
   </div>
